# pycodex

./: README.md  auto_crop.py  pyproject.toml  segmentation_template.py  setup.py
codex/data_process/: crop.py  data_preprocess.R
codex/segmentation/: io_fusion.py  io_keyence.py  mobject.py  visualization.py
demo/data/reg001/: CD15.tiff  CD31.tiff  CD3e.tiff  CD68.tiff  DAPI.tiff  E-cadherin.tiff  HLA-1.tiff  HLA-DR.tiff  Vimentin.tiff  a-SMA.tiff
demo/data/segmentation/reg001/20250530_010550/: parameter_segmentation.json
demo/data/segmentation/reg001/250530_cell/: data.csv  dataScaleSize.csv
demo/data/segmentation/reg001/250530_compartments/: cell_data.csv  cell_dataScaleSize.csv  membrane_data.csv  membrane_dataScaleSize.csv  nuclear_data.csv  nuclear_dataScaleSize.csv  parameter_segmentation.json  segmentation_mask_cell.tiff  segmentation_mask_membrane.tiff  segmentation_mask_nuclear.tiff
demo/data/segmentation_mask/: segmentation_mask.tiff
notebooks/: annotation.ipynb  multiplex.ipynb  segmentation.ipynb  segmentation_annotation_visualization.ipynb  segmentation_mask.ipynb  test.py
pycodex/: align.py  annotation.py  class.py  cls.py  crop.py  io.py  markerim.py  metadata.py  segmentation.py  segmentation_mask.py  utils.py  visualization.py
pycodex/data_process/: align_stack_channels.py  crop.py
pycodex/segmentation/: io.py  io_fusion.py  io_keyence.py  mobject.py  segmentation.py  utils.py  visualization.py
pycodex/visualization/: multiplex.py  segmentation_mask.py  segmentation_test.py  utils.py
